# serverless-extreme-startup

./: .gitignore  Cargo.toml  LICENSE
.circleci/: config.yml  skip-job-if-directory-unchanged.sh
backend/: Cargo.toml  package.json  serverless.yml
backend/src/: main.rs
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/scripts/: deploy-gh-pages.sh
frontend/src/: index.tsx
frontend/src/constants/: buildConstants.ts
frontend/src/frontpage/: frontpage.tsx
frontend/src/github-pages/: gh-pages-spa-redirect-handler.ts  gh-pages-spa-redirect.ts
src/: main.rs
