[package]
name = "extreme-startup"
version = "0.1.0"
authors = ["Callum Rogers <callumrogers@hotmail.co.uk>"]

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda", rev = "75f447c64c7ff34acfde4a16eceb14429f071703" }
aws_lambda_tower_web = { git = "https://github.com/srijs/rust-aws-lambda", rev = "75f447c64c7ff34acfde4a16eceb14429f071703" }
log = "*"
tower-web = "*"
rusoto_core = "0.32.0"
rusoto_dynamodb = "0.32.0"
serde_dynamodb = "*"
serde = "*"
chrono = "*"